--- a/BibliotekaWPFApp/AddBook.xaml
+++ b/BibliotekaWPFApp/AddBook.xaml
@@ -5,14 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BibliotekaWPFApp"
         mc:Ignorable="d"
-        Title="AddBook" Height="267" Width="144">
+        Title="AddBook" Height="267" Width="144" Closed="Window_Closed">
     <Grid x:Name="titleTxt">
-        <Label Content="Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" />
-        <TextBox x:Name="titleTxt1" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <Label x:Name="authorLbl" Content="Author" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" />
-        <TextBox x:Name="authorTxt" HorizontalAlignment="Left" Margin="10,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
-        <Label x:Name="catLbl" Content="Cathegory" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" />
-        <ComboBox x:Name="categoryCmb" HorizontalAlignment="Left" Margin="10,155,0,0" VerticalAlignment="Top" Width="120" />
-        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,197,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click" />
+        <Label Content="Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="titleTxt1" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="authorLbl" Content="Author" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
+        <TextBox x:Name="authorTxt" HorizontalAlignment="Left" Margin="10,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
+        <Label x:Name="catLbl" Content="Cathegory" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top"/>
+        <ComboBox x:Name="categoryCmb" HorizontalAlignment="Left" Margin="10,155,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,197,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click"/>
+
     </Grid>
 </Window>
