--- a/BibliotekaWPFApp/AddBook.xaml
+++ b/BibliotekaWPFApp/AddBook.xaml
@@ -7,13 +7,13 @@
         mc:Ignorable="d"
         Title="AddBook" Height="267" Width="144" Closed="Window_Closed">
     <Grid x:Name="titleTxt">
-        <Label Content="Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="titleTxt1" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="authorLbl" Content="Author" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="authorTxt" HorizontalAlignment="Left" Margin="10,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="catLbl" Content="Cathegory" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="categoryCmb" HorizontalAlignment="Left" Margin="10,155,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,197,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click"/>
-
+        <Label Content="Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" />
+        <TextBox x:Name="titleTxt1" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <Label x:Name="authorLbl" Content="Author" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top" />
+        <TextBox x:Name="authorTxt" HorizontalAlignment="Left" Margin="10,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <Label x:Name="catLbl" Content="Cathegory" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top" />
+        <ComboBox x:Name="categoryCmb" HorizontalAlignment="Left" Margin="10,155,0,0" VerticalAlignment="Top" Width="120" />
+        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,197,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click" />
+        <Button x:Name="wyjdzBtn"  Content="x" HorizontalAlignment="Left" Height="20" Margin="116,10,0,2" VerticalAlignment="Top" Width="14" Click="wyjdzBtn_Click" />
     </Grid>
 </Window>
