--- a/BibliotekaWPFApp/AddClient.xaml
+++ b/BibliotekaWPFApp/AddClient.xaml
@@ -7,11 +7,11 @@
         mc:Ignorable="d"
         Title="AddClient" Height="180" Width="145" Closed="Window_Closed">
     <Grid>
-        <Label Content="Imie" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="nameTxt" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Nazwisko" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="surnameTxt" HorizontalAlignment="Left" Margin="10,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,118,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click"/>
-
+        <Label Content="Imie" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top" />
+        <TextBox x:Name="nameTxt" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <Label Content="Nazwisko" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top" />
+        <TextBox x:Name="surnameTxt" HorizontalAlignment="Left" Margin="10,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" />
+        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,118,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click" />
+        <Button x:Name="wyjdzBtn" Content="X" HorizontalAlignment="Left" Height="20" Margin="108,16,0,0" VerticalAlignment="Top" Width="22" Click="wyjdzBtn_Click" />
     </Grid>
 </Window>
