--- a/BibliotekaWPFApp/AddBook.xaml
+++ b/BibliotekaWPFApp/AddBook.xaml
@@ -7,13 +7,38 @@
         mc:Ignorable="d"
         Title="AddBook" Height="279" Width="161" Closed="Window_Closed">
     <Grid x:Name="titleTxt">
-        <Label Content="Title" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="titleTxt1" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="authorLbl" Content="Author" HorizontalAlignment="Left" Margin="10,70,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="authorTxt" HorizontalAlignment="Left" Margin="10,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label x:Name="catLbl" Content="Cathegory" HorizontalAlignment="Left" Margin="10,124,0,0" VerticalAlignment="Top"/>
-        <ComboBox x:Name="categoryCmb" HorizontalAlignment="Left" Margin="10,155,0,0" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,197,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click"/>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0.75,0" EndPoint="0,1">
+                 <GradientStop Color="#F96100"  Offset="0.1" />
+                 <GradientStop Color="#E70B75"  Offset="0.8" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Label Content="Title" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <TextBox x:Name="titleTxt1" HorizontalAlignment="Center" Margin="0,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"
+                 FontFamily="Arial"
+                 FontSize="20"
+                 FontWeight="Bold"
+                 Foreground="Black"
+                   />
+        <Label x:Name="authorLbl" Content="Author" HorizontalAlignment="Center" Margin="0,70,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <TextBox x:Name="authorTxt" HorizontalAlignment="Center" Margin="0,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"
+                 FontFamily="Arial"
+                 FontSize="20"
+                 FontWeight="Bold"
+                 Foreground="Black"
+                   />
+        <Label x:Name="catLbl" Content="Cathegory" HorizontalAlignment="Center" Margin="0,124,0,0" VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+        <ComboBox x:Name="categoryCmb" HorizontalAlignment="Center" Margin="0,155,0,0" VerticalAlignment="Top" Width="120"
+                 FontFamily="Arial"
+                 FontSize="20"
+                 FontWeight="Bold"
+                  />
+        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Center" Margin="0,197,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click"
+                Background="Green"
+                Foreground="White"
+                FontFamily="Arial"
+                FontSize="20"
+                />
 
     </Grid>
 </Window>
