--- a/BibliotekaWPFApp/AddClient.xaml
+++ b/BibliotekaWPFApp/AddClient.xaml
@@ -5,13 +5,34 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BibliotekaWPFApp"
         mc:Ignorable="d"
-        Title="AddClient" Height="198" Width="160" Closed="Window_Closed">
+        Title="AddClient" Height="300" Width="300" Closed="Window_Closed">
     <Grid>
-        <Label Content="Imie" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="nameTxt" HorizontalAlignment="Left" Margin="10,41,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Nazwisko" HorizontalAlignment="Left" Margin="10,64,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="surnameTxt" HorizontalAlignment="Left" Margin="10,95,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120"/>
-        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Left" Margin="10,118,0,0" VerticalAlignment="Top" Width="120" Click="zapiszBtn_Click"/>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                <GradientStop Color="#DF208F" Offset="0.1" />
+                <GradientStop Color="#DFCF20" Offset="0.8" />
+            </LinearGradientBrush>
+        </Grid.Background>
+        <Label Content="Imie" HorizontalAlignment="Center" Margin="0,25,0,0" VerticalAlignment="Top" FontSize="26"/>
+        <TextBox x:Name="nameTxt" HorizontalAlignment="Center" Height="38" Margin="0,156,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"
+                 FontSize="26"
+                 BorderBrush="{x:Null}"
+                 Background="#FFF6F6F6"
+                 TextAlignment="Center"/>
+        <Label Content="Nazwisko" HorizontalAlignment="Center" Margin="0,110,0,0" VerticalAlignment="Top" FontSize="26"/>
+        <TextBox x:Name="surnameTxt" HorizontalAlignment="Center" Height="38" Margin="0,69,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="250"
+                 FontSize="26"
+                 BorderBrush="{x:Null}"
+                 Background="#FFF6F6F6"
+                 TextAlignment="Center"/>
+        <Button x:Name="zapiszBtn" Content="Zapisz" HorizontalAlignment="Center" Margin="0,210,0,0" VerticalAlignment="Top"  Click="zapiszBtn_Click"
+                Height="50" 
+                Width="134"
+                Background="#FF64CCF1"
+                Foreground="White"
+                FontFamily="Arial"
+                FontSize="20"
+                />
 
     </Grid>
 </Window>
