--- a/BibliotekaWPFApp/BorrowWindow.xaml
+++ b/BibliotekaWPFApp/BorrowWindow.xaml
@@ -5,11 +5,29 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:BibliotekaWPFApp"
         mc:Ignorable="d"
-        Title="BorrowWindow" Height="176" Width="161" Closed="Window_Closed">
+        Title="BorrowWindow" Height="200" Width="200" Closed="Window_Closed">
     <Grid>
-        <ComboBox x:Name="clientsCmb" HorizontalAlignment="Left" Margin="10,53,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Klient" HorizontalAlignment="Left" Margin="10,10,0,0" VerticalAlignment="Top"/>
-        <Button Content="Zapisz" HorizontalAlignment="Center" Margin="0,104,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click"/>
+        <Grid.Background>
+            <LinearGradientBrush StartPoint="0,0" EndPoint="1,1">
+                 <GradientStop Color="#06A4FB" Offset="0.1" />
+                 <GradientStop Color="#B84EEB" Offset="0.8" />
+        </LinearGradientBrush>
+        </Grid.Background>
+
+        <ComboBox x:Name="clientsCmb" HorizontalAlignment="Center" Margin="0,53,0,0" VerticalAlignment="Top" Width="120"
+               FontSize="15"
+               FontWeight="Bold"
+                  />
+        <Label Content="Wybierz Klienta" HorizontalAlignment="Center" Margin="0,10,0,0" VerticalAlignment="Top"
+               FontSize="15"
+               FontWeight="Bold"
+               />
+        <Button Content="Zapisz" HorizontalAlignment="Center" Margin="0,104,0,0" VerticalAlignment="Top" Width="100" Click="Button_Click"
+                Background="#F08080"
+                Foreground="White"
+                FontFamily="Arial"
+                FontSize="20"
+                />
 
     </Grid>
 </Window>
